feat: rebrand qTox to pqTox with post-quantum cryptography support
- Rename project from qTox to pqTox in CMakeLists.txt
- Add new README.md documenting PQ features and security model
- Add comprehensive PQ integration documentation:
  - Architecture overview (toxcore integration)
  - Required code changes for PQ support
  - Step-by-step implementation guide
  - Build guide for all platforms

pqTox adds ML-KEM-768 + X25519 hybrid encryption for quantum resistance
while maintaining backwards compatibility with classical Tox clients.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,10 +63,10 @@ execute_process(
   OUTPUT_STRIP_TRAILING_WHITESPACE)
 
 project(
-  qTox
+  pqTox
   VERSION 1.18.3
   LANGUAGES CXX)
-set(PROJECT_ORG "io.github.qtox")
+set(PROJECT_ORG "io.github.pqtox")
 
 string(TOLOWER ${PROJECT_NAME} BINARY_NAME)
 
