feat(ci): add Windows cross-compilation and PQ build infrastructure
This commit consolidates all CI/build improvements for pqTox:

Windows Cross-Compilation:
- Add MinGW-w64 toolchain file for cross-compiling to Windows
- Add build-pq-windows.yml workflow with full dependency builds
- Build libsodium from git master for ML-KEM-768 support
- Build opus, vpx, OpenSSL, OpenAL, libexif, qrencode, SQLite3
- Support both Debug and Release build types
- Add Windows API libraries (iphlpapi, winmm, ws2_32, crypt32)
- Patch OpenAL pkgconfig for static Windows linking

Linux PQ Build:
- Add build-pq.yml workflow for Ubuntu/Fedora PQ builds
- Build PQ toxcore from TokTok/c-toxcore-pq fork
- Fix FFmpeg 8.0 AV_CLASS_CATEGORY_HWDEVICE enum handling

CMake Improvements:
- Allow package finding in non-sysroot paths for cross-compilation
- Add Windows API library dependencies

Branding:
- Add pqtox icon symlinks (temporary until proper icons created)
- Add pqtox desktop/appdata symlinks for Linux packaging
- Rename NSIS installer script for pqTox
- Rename flatpak descriptor for pqTox

Workflow Adjustments:
- Disable arm64 macOS builds (PQ toxcore not yet supported)
- Comment out flatpak/macOS deploy jobs (need PQ toxcore manifests)
- Update release drafter and WASM build for pqTox

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,4 +1,35 @@
-_extends: .github
+name-template: 'v$RESOLVED_VERSION'
+tag-template: 'v$RESOLVED_VERSION'
+template: |
+  ## What's Changed
+
+  $CHANGES
+
+  **Full Changelog**: https://github.com/$OWNER/$REPOSITORY/compare/$PREVIOUS_TAG...v$RESOLVED_VERSION
+
+categories:
+  - title: 'Breaking Changes'
+    labels:
+      - 'api break'
+  - title: 'Features'
+    labels:
+      - 'enhancement'
+      - 'feature'
+  - title: 'Bug Fixes'
+    labels:
+      - 'bug'
+      - 'fix'
+  - title: 'Post-Quantum Cryptography'
+    labels:
+      - 'pq'
+      - 'post-quantum'
+  - title: 'CI/CD'
+    labels:
+      - 'ci'
+      - 'build'
+  - title: 'Other Changes'
+    labels:
+      - '*'
 
 version-resolver:
   major:
@@ -7,3 +38,12 @@ version-resolver:
   minor:
     labels:
       - 'enhancement'
+      - 'feature'
+  patch:
+    labels:
+      - 'bug'
+      - 'fix'
+  default: patch
+
+exclude-labels:
+  - 'skip-changelog'
