--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -179,9 +179,7 @@ jobs:
     if: github.event_name != 'push'
     strategy:
       matrix:
-        arch: [arm64, x86_64]
-        exclude:
-          - arch: ${{ github.event_name == 'pull_request' && !contains(github.event.pull_request.labels.*.name, 'packaging') && 'arm64' }}
+        arch: [x86_64]  # arm64 disabled until PQ toxcore supports it
     runs-on: ${{ matrix.arch == 'x86_64' && 'macos-15-intel' || 'macos-14' }}
     steps:
       - uses: actions/checkout@v4
@@ -293,28 +291,30 @@ jobs:
         .ci-scripts/smoke-test.sh
         test/resources/profile
 
-  flatpak:
-    name: Flatpak
-    uses: TokTok/ci-tools/.github/workflows/deploy-flatpak.yml@master
-    needs: [prepare]
-    with:
-      org-name: io.github.qtox
-      smoke-test: .ci-scripts/smoke-test.sh
-      test-files: |
-        .ci-scripts/smoke-test.sh
-        test/resources/profile
+  # TODO: Re-enable when flatpak manifest is updated for PQ toxcore
+  # flatpak:
+  #   name: Flatpak
+  #   uses: TokTok/ci-tools/.github/workflows/deploy-flatpak.yml@master
+  #   needs: [prepare]
+  #   with:
+  #     org-name: io.github.qtox
+  #     smoke-test: .ci-scripts/smoke-test.sh
+  #     test-files: |
+  #       .ci-scripts/smoke-test.sh
+  #       test/resources/profile
 
-  macos:
-    name: macOS
-    uses: TokTok/ci-tools/.github/workflows/deploy-macos.yml@master
-    needs: [prepare]
-    with:
-      cmake-args: -D STRICT_OPTIONS=ON
-      screenshot: true
-      smoke-test: .ci-scripts/smoke-test.sh
-      test-files: |
-        .ci-scripts/smoke-test.sh
-        test/resources/profile
+  # TODO: Re-enable when macOS build script supports PQ toxcore
+  # macos:
+  #   name: macOS
+  #   uses: TokTok/ci-tools/.github/workflows/deploy-macos.yml@master
+  #   needs: [prepare]
+  #   with:
+  #     cmake-args: -D STRICT_OPTIONS=ON
+  #     screenshot: true
+  #     smoke-test: .ci-scripts/smoke-test.sh
+  #     test-files: |
+  #       .ci-scripts/smoke-test.sh
+  #       test/resources/profile
 
   windows:
     name: Windows
